type FolderDto = {
	id: string
	parent_id?: string
	name: string
}

export default FolderDto
