type RequestDto = {
	id: string
	name: string
	url?: string
	folder_id: string
	request_method_id: string
	json_body?: string
}

export default RequestDto
